# arithmetic-coding

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
in/: in.txt
src/: main.c  test.c
src/utils/: arithmetic-coding.c  arithmetic-coding.h  bignum.c  bignum.h  fatstring.c  fatstring.h  modinv.c  modinv.h  type.h  vec.c  vec.h
